new activity added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListOddsActivity"></activity>
-        <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".ListOddsActivity" />
+        <activity android:name=".MenuActivity" />
+        <activity android:name=".CompetitionsActivity"></activity>
     </application>
 
 </manifest>
